--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <main class="main">
         <h2>all</h2>
     
-        <a href="/recipes/padkapao.html" >
+        <a href="recipes/padkapao.html" >
             <div class="recipe">
                 
                 <div class="name" id="padkapao">
