--- a/recipes/pancakes-fluffy.html
+++ b/recipes/pancakes-fluffy.html
@@ -44,21 +44,21 @@
         <h2 dir="rtl">פנקייקים עבים</h2>
         <h3 dir="rtl">מצרכים</h3>
         <ul class="list">
-            <li>In a small bowl, whisk together egg and milk.</li>
+            <li>1.5 (386g) cups milk </li>
 
-            <li>In a separate bowl, whisk and combine all-purpose flour with granulated sugar, salt, baking soda, and baking powder.</li>
+            <li>1 egg </li>
 
-            <li>Mix the dry ingredients with the wet ingredients while constantly whisking.</li> 
+            <li>2 cups (300g) all-purpose flour</li> 
 
-            <li>While whisking add in melted unsalted butter. Whisk until combined. Rest for 5 minutes.</li>
+            <li>1/4 cup (62g) granulated sugar</li>
 
-            <li>Preheat a nonstick skillet over medium. Spray with spray oil or unsalted butter.</li>
+            <li>1 tsp (4g) salt</li>
 
-            <li> Once hot spoon ¼” dollops of the pancake batter. Cook for 2-3 minutes or until golden brown on the bottom. </li>
+            <li>1/4 tsp (1g) baking soda</li>
 
-            <li>Flip and cook for an additional 2-3 minutes. Repeat with the rest of the batter. </li>
+            <li>1 Tbsp (12g) baking powder</li>
 
-            <li>Top with butter and drizzle with maple syrup to serve. </li>
+            <li>2 (21g) Tbsp melted butter</li>
         </ul>
         <h3 dir="rtl">הוראות הכנה</h3>
         <ol class="list">
